# not-enough-standards

./: CMakeLists.txt  LICENSE  README.md  main.cpp  other.cpp
.github/workflows/: common.yml
cmake/: NotEnoughStandards.cmake.in
include/nes/: hash.hpp  named_mutex.hpp  named_semaphore.hpp  pipe.hpp  process.hpp  semaphore.hpp  shared_library.hpp  shared_memory.hpp  thread_pool.hpp
tests/: common.hpp  library.cpp  process.cpp  process_other.cpp
